# falke

./: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
config/: init-localstack.py
research/: README.md  analysis.ipynb  download_markets.py  download_prices.py  mr_classifier_dump.txt  mr_classifier_meta.json  mr_classifier_xgboost.json  mr_classifier_xgboost.onnx  mr_classifier_xgboost_raw.ubj  requirements.txt
scripts/: deploy.sh
src/: config.rs  error.rs  main.rs
src/db/: dynamo.rs  mod.rs  models.rs
src/market_data/: collector.rs  mod.rs  price_store.rs  websocket.rs
src/polymarket/: auth.rs  clob_api.rs  gamma_api.rs  mod.rs  on_chain.rs  types.rs
src/strategy/: arbitrage.rs  mean_reversion.rs  ml_signal.rs  mod.rs  momentum.rs  risk.rs  signals.rs  tail_risk.rs
src/telegram/: auth.rs  bot.rs  handlers.rs  keyboards.rs  mod.rs
src/trading/: autotune.rs  engine.rs  executor.rs  mod.rs  paper.rs  portfolio.rs  reconcile.rs  testing.rs
src/utils/: crypto.rs
terraform/: dynamodb.tf  ecs.tf  lambda.tf  main.tf  monitoring.tf  networking.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf
